--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "antd": "^5.20.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
